# prcn_lib

./: .gitignore  Cargo.toml  README.md  REDME.md  TODO.md  snippet.txt
.github/workflows/: actions.yml
examples/: abc120_d.rs  abc125_c.rs  abc146_c.rs  abc166_f.rs  arc084_c.rs  enumerating_primes.rs  joi2008yo_a.rs
src/: accumulate.rs  binary_powering.rs  binary_search.rs  bitset.rs  capital.rs  combinatorics.rs  consts.rs  factorial.rs  flex_maxmin.rs  graph.rs  grid.rs  idx.rs  inversation.rs  io.rs  lib.rs  math.rs  minmax.rs  modint.rs  monoid.rs  prelude.rs  prime.rs  regacy.rs  run_length_encoding.rs  segment_tree.rs  shuffle.rs  structure.rs  union_find.rs  unique_count.rs  util.rs  visualize.rs
src/bitset/: def.rs
src/combinatorics/: binomial_coefficient.rs  combination.rs  combinatorics.rs  factorial.rs  permutation.rs
src/graph/: algo.rs  bellman_ford.rs  bfs.rs  def.rs  dfs.rs  dijkstra.rs  graph.rs  mod.rs  tree.rs  util.rs
src/graph/grid/: def.rs
src/graph/tree/: lowest_common_ancestor.rs  tree_graph.rs
src/math/: chinese_reminder_theorem.rs  row_reduction.rs  tools.rs
src/modint/: aplicate.rs  combination.rs  def.rs  mod.rs  ops.rs  tests.rs
src/prime/: sieve.rs  trial_division.rs
src/structure/: accumulate.rs  algebraic_traits.rs  delayed_segment_tree.rs  fenwick_tree.rs  generic_fenwick_tree.rs  segment_tree.rs  union_find.rs
src/structure/algebraic_traits/: abel.rs  monoid.rs
