[package]
authors = ["Loptall <yutapypy0930@gmail.com>"]
description = "private library for atcoder"
edition = "2018"
license = "MIT"
name = "prcn_lib"
version = "0.2.5"

[dependencies]
itertools = "0.9.0"
rand = "0.7.3"

[dependencies.proconio]
features = ["derive"]
rand = "0.7.3"
version = "0.3.6"
