[package]
authors = ["Loptall <yutapypy0930@gmail.com>"]
description = "private library for atcoder"
edition = "2018"
license = "MIT"
name = "prcn_lib"
version = "0.2.7"
[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
rand = "0.7.3"
num = "0.2.1"

[dependencies.proconio]
features = ["derive"]
version = "0.3.6"
